--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "cu"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
+repository = "https://github.com/kion/cu"
 
 [dependencies]
 lazy_static = "1.4.0"
 regex = "1.5.4"
+indexmap = "2.9.0"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
